Try out PhantomJS 2.0

--- a/composer.json
+++ b/composer.json
@@ -19,5 +19,10 @@
             "PhantomPdf\\": "src"
         }
     },
+    "extra": {
+        "branch-alias": {
+            "dev-phantomjs2": "1.0.x-dev"
+        }
+    },
     "minimum-stability": "stable"
 }
